# pg-concurrency

./: .dockerignore  .editorconfig  .env.example  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml
migrations/: env.py
migrations/versions/: 2da90c937635_init.py  774f09c26adf_added_pg_concurrency_settings.py  bdc4d94ffd57_concurrency_settings.py
src/: main.py
src/concurrency/abstract/: repo.py  service.py
src/concurrency/depends/: database.py
src/concurrency/domains/: dto.py  entity.py  service.py
src/concurrency/gateways/: models.py  repo.py
src/concurrency/routes/: frontend.py  isolation.py  schema.py
src/core/: database.py  dto.py  entity.py  enums.py  helpers.py  lifespan_events.py  settings.py
src/core/concurrency/: database.py
src/core/concurrency/abstract/: queries.py  repo.py  service.py
src/depends/concurrency/: database.py
src/depends/database/: ddl.py
src/depends/jinja/: templates.py
src/domains/: dto.py
src/domains/concurrency/: dto.py  entity.py  queries.py  service.py
src/domains/orders/: dto.py
src/gateways/concurrency/: models.py  repo.py
src/gateways/orders/: queries.py
src/orders/abstract/: callback.py  provider.py  query.py
src/orders/depends/: provider.py  query.py
src/orders/domains/: callback.py  dto.py  query.py
src/orders/gateways/: queries.py
src/orders/routes/: query.py
src/static/: styles.css
src/templates/: index.html
src/views/api/: ddl.py
src/views/concurrency/: ddl.py  dml.py
src/views/interface/: index.py
src/views/orders/: index.py
(+6 files in other folders)
