[tool.poetry]
name = "pg-concurrency"
version = "0.1.0"
description = ""
authors = ["youngwishes <d.fedorov@ylab.team>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
jinja2 = "^3.1.4"
aiosql = "^10.1"
pre-commit = "^3.7.1"
asyncpg = "^0.29.0"
pydantic-settings = "^2.3.4"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
